--- a/force-app/main/default/reports/I_ST_SACE_Reports.reportFolder-meta.xml
+++ b/force-app/main/default/reports/I_ST_SACE_Reports.reportFolder-meta.xml
@@ -2,7 +2,7 @@
 <ReportFolder xmlns="http://soap.sforce.com/2006/04/metadata">
     <folderShares>
         <accessLevel>View</accessLevel>
-        <sharedTo>lt@uni.com</sharedTo>
+        <sharedTo>demo@uni.com</sharedTo>
         <sharedToType>User</sharedToType>
     </folderShares>
     <folderShares>
